--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "main": "lib/index.js",
   "scripts": {
-    "build": "father-next",
+    "build": "webpack",
     "test": "umi-test --coverage",
     "debug": "umi-test",
     "lint": "eslint --ext .js src",
@@ -34,6 +34,16 @@
   "author": "chencheng <sorrycc@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.4.0",
+    "babel-runtime": "^6.23.0",
+    "css-loader": "^0.28.1",
+    "node-sass": "^4.5.2",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.17.0",
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^2.4.5",
     "@babel/core": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@umijs/test": "^3.2.28",
@@ -45,7 +55,6 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
-    "father-next": "^3.0.0-alpha.3",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.8",
     "material-ui": "^0.20.2",
