--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "umi-test --coverage",
     "debug": "umi-test",
     "lint": "eslint --ext .js src",
-    "coveralls": "cat ./coverage/lcov.info | coveralls",
+    "coveralls": "cat ./coverage/lcov.info | coveralls"
   },
   "author": "chencheng <sorrycc@gmail.com>",
   "license": "MIT",
