--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Component modular import plugin for babel.",
   "main": "lib/index.js",
   "scripts": {
+    "build": "babel src -d lib",
     "test": "umi-test --coverage",
     "debug": "umi-test",
     "lint": "eslint --ext .js src",
@@ -12,38 +13,11 @@
   "author": "chencheng <sorrycc@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel-loader": "^7.0.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.4.0",
-    "babel-runtime": "^6.23.0",
-    "css-loader": "^0.28.1",
-    "node-sass": "^4.5.2",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.17.0",
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.5",
-    "@babel/core": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "@umijs/test": "^3.2.28",
-    "babel-core": "^7.0.0-0",
-    "babel-preset-umi": "^1.0.0",
-    "coveralls": "^3.0.6",
-    "eslint": "^7.1.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-prettier": "^3.1.3",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.8",
-    "material-ui": "^0.20.2",
-    "np": "^6.2.0",
-    "prettier": "^2.0.5",
-    "react-toolbox": "^1.2.5"
-  },
-  "babel": {
-    "presets": [
-      "umi"
-    ]
+    "@babel/cli": "^7.13.0",
+    "@babel/core": "^7.13.8",
+    "@babel/node": "^7.13.0",
+    "@babel/preset-env": "^7.13.9",
+    "babel-preset-umi": "^1.0.0"
   },
   "dependencies": {
     "@babel/helper-module-imports": "^7.0.0",
